# soft-space

./: .gitignore  Dockerfile  Dockerfile.production  Makefile  README.md  docker-compose-test.yaml  docker-compose.yaml  example.env  pyproject.toml
migrations/: env.py
migrations/versions/: ba1cf51080d5_user.py
src/: database.py  dependencies.py  main.py  settings.py
src/crud/: __init__.py  user.py
src/models/: user.py
src/routers/: user.py
src/schemas/: user.py
